# netcdf-info

./: README.md  pyproject.toml
.github/workflows/: CI.yml
src/netcdf_info/cli/: netcdf_info.py
